@@ -1,3 +1,8 @@
+2014-07-24  Tom Tromey  <tromey@redhat.com>
+
+	* btrace.c: Include defs.h.
+	* common/btrace-common.h: Don't include server.h or defs.h.
+
 2014-07-24  Gary Benson  <gbenson@redhat.com>
 
 	* gdb/nat/i386-dregs.c: Don't include server.h or defs.h; update
